# excavabot

./: excavaROB.vcg
dump_truck_description/: mainpage.dox  manifest.xml
excavaROB_action/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml
excavaROB_action/src/: excavation_action.cpp~  left_excavation_action.cpp  left_excavation_action.cpp~  left_truck_loading_action.cpp  left_truck_loading_action.cpp~  left_truck_loading_return_action.cpp  left_truck_loading_return_action.cpp~  right_excavation_action.cpp  right_excavation_action.cpp~  right_truck_loading_action.cpp  right_truck_loading_action.cpp~  right_truck_loading_return_action.cpp  right_truck_loading_return_action.cpp~  startup_action.cpp  startup_action.cpp~
excavaROB_arm_navigation/: stack.xml
excavaROB_common/: stack.xml
excavaROB_controller_configuration/: mainpage.dox  manifest.xml
excavaROB_gazebo/: mainpage.dox  manifest.xml
excavaROB_mechanism_controllers/: CMakeLists.txt  CMakeLists.txt~  controller_plugins.xml  mainpage.dox  manifest.xml
excavaROB_teleop/: CMakeLists.txt  mainpage.dox  manifest.xml
excavaROB_trucks/: stack.xml
motion_lib/: stack.xml
motion_lib/dmp_controller/: CMakeLists.txt  controller_plugins.xml  mainpage.dox  manifest.xml
motion_lib/dmp_controller/include/dmp_controller/: dmp_controller.h  dmp_controller.h~  dmp_ik_controller.h
motion_lib/dmp_controller/launch/: excavaROB_dmp_arm_controller.yaml~  excavaROB_dmp_controller.launch
motion_lib/dmp_controller/msg/: DMPJointControllerState.msg  State.msg
motion_lib/dmp_controller/node/: addToExecuteDMPQueueClient.py  addToExecuteDMPQueueClient.py~
motion_lib/dmp_controller/src/: dmp_controller.cpp  dmp_ik_controller.cpp  dmp_ik_controller.cpp~
motion_lib/dmp_controller/srv/: AddToExecuteDMPQueue.srv
motion_lib/dynamic_movement_primitives/: CMakeLists.txt  manifest.xml
motion_lib/dynamic_movement_primitives/include/dynamic_movement_primitives/: canonical_system.h  dmp.h  dmp.h~  trajectory.h  trajectory.h~  transformation_system.h
motion_lib/dynamic_movement_primitives/matlab/: imitation_learning_results.m  plotTrajectory.m  plot_imitation_learning_results.m
motion_lib/dynamic_movement_primitives/msg/: CanonicalSystem.msg  Model.msg  Trajectory.msg  TransformationSystem.msg
motion_lib/dynamic_movement_primitives/src/: canonical_system.cpp  canonical_system.cpp~  dmp.cpp  dmp.cpp~  trajectory.cpp  trajectory.cpp~  transformation_system.cpp  transformation_system.cpp~
motion_lib/dynamic_movement_primitives/test/: dmp_test.cpp  dmp_test.cpp~  dmp_test.launch  dmp_test.yaml  dmp_test.yaml~
motion_lib/dynamic_movement_primitives/test/data_test/left_excavation/: 1_left_excavation_dmp_traj_learned.txt  2_left_excavation_dmp_traj_learned.txt  3_left_excavation_dmp_traj_learned.txt  4_left_excavation_dmp_traj_learned.txt  left_excavation_dmp_dmp.bag  left_excavation_dmp_ft.txt  left_excavation_dmp_traj_learned.txt  left_excavation_dmp_writed_action.txt
motion_lib/dynamic_movement_primitives/test/data_test/left_truck_loading/: 1_left_truck_loading_dmp_traj_learned.txt  2_left_truck_loading_dmp_traj_learned.txt  3_left_truck_loading_dmp_traj_learned.txt  4_left_truck_loading_dmp_traj_learned.txt  left_truck_loading_dmp_dmp.bag  left_truck_loading_dmp_ft.txt  left_truck_loading_dmp_traj_learned.txt  left_truck_loading_dmp_writed_action.txt
motion_lib/lwr/: CMakeLists.txt  CMakeLists.txt~  manifest.xml
motion_lib/lwr/include/lwr/: lwr.h
motion_lib/lwr/launch/: lwr_test.launch  lwr_test.yaml
motion_lib/lwr/matlab/: lwr_plot_test_results.m
motion_lib/lwr/src/: lwr.cpp  lwr.cpp~
motion_lib/lwr/test/: lwr_test.cpp
motion_lib/lwr/test/data_test/: basis_function_matrix.txt  lwr_model.bag  y_test.txt  yp_test_copy.txt
simulations_gazebo/: mainpage.dox  manifest.xml
truck_detector/: CMakeLists.txt  (+2 more)
(+257 files in other folders)
